Issue #25961: Disallowed null characters in the type name.